...
    <string name="app_name">Festivizer</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="default_leader">Default Leader</string>
    <string name="e_mail_or_username">E-mail or Username</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="phone">Phone</string>
    <string name="verify_password">Verify Password</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="festival">Festival</string>
    <string name="stat_time">Stat time</string>
    <string name="end_time">End time</string>
...
    <string name="add_new_event">Add new event</string>
    <string name="events">Events</string>
    <string name="festival_profile">Festival profile</string>
    <string name="festival_creation">Festival creation</string>
    <string name="festival_logo">Festival Logo</string>
    <string name="create">Create</string>
    <string name="my_profile">My Profile</string>
    <string name="e_mail">E-Mail</string>
    <string name="festivals">Festivals</string>
    <string name="default_organizer">Default Organizer</string>
    <string name="default_festival">Default Festival</string>
    <string name="create_event">Create event</string>
    <string name="desc">Desc</string>
    <string name="job_abc_until_ending_n_h_min_sec">Job ABC, until ending:   1:25:32</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="my_events">My Events</string>
    <string name="completed">Completed</string>
    <string name="my_festivals">My Festivals</string>
    <string name="search_here">Search here</string>
    <string name="search">Search</string>
    <string name="organizer">Organizer</string>
    <string name="event_view">Event view</string>
    <string name="waiting_list">Waiting list</string>
...
    <string name="worker">Worker</string>
    <string name="price">Price</string>
    <string name="number_of_people">Number of people</string>
    <string name="time">Time</string>
    <string name="comment">Comment</string>
    <string name="application_profile">Application profile</string>
    <string name="apply_for_a_festival">Apply for a festival</string>
    <string name="festivalName">festival name</string>
    <string name="event">Event</string>
    <string name="decs">Decs</string>
    <string name="festival_name">Festival Name</string>
    <string name="job">Job</string>
    <string name="worker_name">Worker name</string>
    <string name="auction">Auction</string>
    <string name="add_comment">Add Comment</string>
    <string name="create_job">Create Job</string>
    <string name="job_creation">Job Creation</string>
    <string name="started">Started</string>
    <string name="some_txt_change_from_java"><![CDATA[Some txt (change from Java) ->]]></string>
    <string name="my_jobs">My Jobs</string>
    <string name="generate_pass">Generate Pass</string>
    <string name="print_pass">Print Pass</string>
    <string name="name_abc_change_in_java">Name ABC (change in JAVA)</string>
    <string name="approve">Approve</string>
    <string name="specializations">Specializations</string>
    <string name="completed_jobs">Completed Jobs</string>
...
