<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--  Profile picture -->
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/default_profile_picture" />

        <!--  Username Label -->
        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:inputType="textCapWords" />

        <!-- Email Label -->
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email" />

        <!-- Password Label -->
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"/>

        <!-- Verify Password Label -->
        <EditText
            android:id="@+id/verify_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Verify Password"
            android:inputType="textPassword" />

        <!-- Phone Label -->
        <EditText android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="Phone" />

        <!-- Name Label -->
        <EditText android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Name" />

        <!-- Surname Label -->
        <EditText android:id="@+id/input_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Surname" />

        <!-- Role dropdown list -->
        <Spinner
            android:id="@+id/roleChooser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:padding="12dp"
            android:text="Create Account"
            android:background="@drawable/signup_button"
            android:textColor="#FFFFFF"/>

        <!-- Login Button -->
        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Already a member? Login"
            android:gravity="center"
            android:textSize="16dip"
            android:textColor="#FFFFFF"/>


    </LinearLayout>
</ScrollView>
